WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40765
PageCache.cpp compile error when WML is enabled
https://bugs.webkit.org/show_bug.cgi?id=40765
Summary
PageCache.cpp compile error when WML is enabled
red47514f7
Reported
2010-06-17 02:11:43 PDT
PageCache.cpp lines 269..273: -- cut here -- #if ENABLE(WML) && !frame->document()->containsWMLContent() && !frame->document()->isWMLDocument(); #endif && frame->loader()->client()->canCachePage(); -- cut here -- Obviously, if WML is enabled, the build fails.
Attachments
Add attachment
proposed patch, testcase, etc.
red47514f7
Comment 1
2010-07-06 12:20:13 PDT
Still present in trunk.
Daniel Bates
Comment 2
2010-07-24 21:59:38 PDT
Confirmed this breaks the build when building with WML support.
Daniel Bates
Comment 3
2010-07-24 22:26:15 PDT
Committed build fix in changeset 64019 <
http://trac.webkit.org/changeset/64019
>. Unfortunately, this fix alone does not fix the build when compiling with WML support enabled. See
Bug #42943
for more details.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug