2010-07-24  Daniel Bates  <dbates@rim.com>

Unreviewed, build fix when building with WML support.

        PageCache.cpp compile error when WML is enabled
        https://bugs.webkit.org/show_bug.cgi?id=40765

        Remove extraneous semicolon.

        Note, building with WML support enabled is broken
        even with this fix. See Bug #42943 for more details.

        * history/PageCache.cpp:
        (WebCore::PageCache::canCachePageContainingThisFrame):


git-svn-id: svn://svn.chromium.org/blink/trunk@64019 bbb929c8-8fbe-4397-9dbb-9b2b20218538